2006-05-01  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (read): Remove unused method.
	(getLexer): Remove - use super version.
	(createReadTable): Update called method name.
	* kawa/standard/read.java (apply1): Update ScmRead -> LispReader.

2006-04-26  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (make(Declaration)): Set capturedScope.
	* kawa/standard/define_syntax.java (scanForm): If immediate, generate
	a call to set the capturedScope.
	* kawa/standard/location.java (rewrite): Revert 2006-04-21 change.
	Instead follow aliases before setting can-read/can-write flags.

2006-04-21  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (importDefinitions): Don't needlessly
	clear simple flag for alias declaration.
	* kawa/standard/location.java (rewrite): Mark declaration as non-simple.

2006-04-19  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (importDefinitions): Check exported
	decl's isPrivate rather than field name.  More robust in that it works
	even if imported module hasn't been compiled yet.

2006-04-14  Per Bothner  <per@bothner.com>

	Various macro fixes.  Most important, quasisyntax sub-templates inherit
	a shared TemplateScope.
	* kawa/lang/PatternScope.java (push): Set outer scope.
	* kawa/lang/TemplateScope.java (make): New factory methods.
	* kawa/lang/SyntaxTemplate.java (execute): Use passed-in TemplateScope
	rather than allocating it.
	If DEBUGGING, check if vars is null.
	* kawa/lang/SyntaxRules.java (expand): Need to allocate TemplateScope
	here before passing it to SyntaxTemplate.execute.
	* kawa/lang/Translator.java (templateScopeDecl): New field.
	* kawa/standard/let_syntax.java (rewrite): Set setCapturedScope
	on new macros.
	* kawa/standard/syntax.java (rewriteForm): Genrate code to allocate
	and use TemplateScope, using templateScopeDecl.

	* kawa/standard/let_syntax.java (rewrite): Set name of macro.

2006-04-10  Dean Ferreyra <dferreyra@igc.org>